# bayes-error-estimation

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: resnet_fashion_mnist.ipynb
scripts/: anonymize
scripts/bias/: bias_bounds.py  figure2.py  figure5.py  figure6.py  figure7_experiment.py  figure7_plot.py
scripts/calibration/: corruption_map_plot.py  exp.py  plot.py  violation_plot.py
src/bayes_error/: __init__.py  calibrate.py  estimator.py
src/data/: chaos_nli.py  cifar10.py  fashion_mnist.py  iclr.py  load.py  synthetic.py  test_fashion_mnist.py  test_synthetic.py  uniform.py  utils.py
