[project]
name = "bayes-error"
version = "0.1.0"
description = "Code for the paper \"Practical estimation of the optimal classification error with soft labels and calibration\""
readme = "README.md"
authors = [
    { name = "Anonymous", email = "anonymous@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "betacal>=1.1.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "uncertainty-calibration>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
