[project]
name = "bayes-error"
version = "0.1.0"
description = "Code for the paper \"Practical estimation of the optimal classification error with soft labels and calibration\""
readme = "README.md"
authors = [
    { name = "Ryota Ushio", email = "ushio@ms.k.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.pyright]
enableTypeIgnoreComments = true
exclude = [
    "notebooks",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.uv.workspace]
members = [
    "packages/*"
]
